# wedge

./: CMakeLists.txt  CMakeLists.txt.patch  ChangeLog  Doxyfile.patch  Makefile.am  Makefile.in  README  README.md  configure  configure.ac  function.cppy.patch  function.hppy.patch  getginac.sh  ginac-1.6.7.tar.bz2  matrix.patch  ncmul.cpp.patch  ncmul.patch  ncmul11.patch  ncmul2.patch  operators.patch  print.h.patch  print.patch  wedge-0.2.pc  wedge-0.3.pc.in
dictionary/: ChangeLog  Makefile.am  Makefile.in  README  basedictionary.h  dictionary.cpp  dictionary.h  invariantforms.cpp  invariantforms.h  ode.h  parsedictionary.h  principal.h  productmanifold.h  vvaluedforms.h
dictionary/dictionaries/: SU3SO3Dictionary.h  SU3SU2Dictionary.h  SU3U2Dictionary.h  SU3U2DictionaryWithWeight.h
dictionary/doc/: Makefile.am  Makefile.in  dictionary.doxyfile
dictionary/groups/: SU3.h  groups.cpp
dictionary/representations/: C2.h  C2_U2.h  R3.h
doc/: Makefile.am  Makefile.in  doxyfile.in
examples/: CMakeLists.txt  Makefile.am  Makefile.in  almostcomplex.cpp  cartan.cpp  clifford.cpp  coherentsplittings.h  curvature.cpp  dictionary.cpp  einsteinsasaki.cpp  estable.cpp  gkspinors.cpp  groups.cpp  halfflat.cpp  parambasis.h  performance.cpp  ricci.cpp  so3.cpp  specialgeometries.cpp  symplectic.cpp
examples/src/: almostcomplex.cpp  cartan.cpp  clifford.cpp  coherentsplittings.h  curvature.cpp  dictionary.cpp  einsteinsasaki.cpp  estable.cpp  gkspinors.cpp  groups.cpp  halfflat.cpp  parambasis.h  performance.cpp  ricci.cpp  so3.cpp  specialgeometries.cpp  symplectic.cpp
test/: CMakeLists.txt  Makefile.am  Makefile.in  algebra.h  algebraic.h  aragelispeed.cpp  base.h  connections.h  functions.h  manifolds.h  poly.h  representations.h  test.h
test/src/: algebra.h  base.h  connections.h  convenience.h  coordinates.h  functions.h  lambda.h  liegroups.h  manifolds.h  metrics.h  poly.h  representations.h  structures.h  test.h  wedgealgebraic.h
wedge/: CMakeLists.txt  Makefile.am  Makefile.in  adjoint.h  affinebasis.h  anylinalg.h  aragelilinalg.h  basis.h  bilinear.h  bilinearform.cpp  bilinearform.h  cocoapolyalg.h  concretemanifold.h  config.h  config.h.in  connection.cpp  connection.h  coordinates.h  derivation.h  differentialform.cpp  differentialform.h  expressions.h  fderivative.cpp  fderivative.h  function.h  ginaclinalg.h  gl.h  gstructure.h  lambda.h  latex.cpp  latex.h  leibniz.h  liederivative.cpp  liederivative.h  liegroup.cpp  liegroup.h  liegroupextension.h  liegroupstructures.h  liesubgroup.cpp  liesubgroup.h  (+59 more)
wedge/wedge/: wedge.h  wedgeconfig.h.in
wedge/wedge/base/: classname.h  expressions.h  logging.cpp  logging.h  normalform.cpp  normalform.h  parameters.h  utilities.cpp  utilities.h  wedgealgebraic.cpp  wedgealgebraic.h  wedgebase.h  wexception.cpp  wexception.h
wedge/wedge/connections/: connection.cpp  connection.h  pseudolevicivita.cpp  pseudolevicivita.h  riemannianconnection.h  torsionfreeconnection.h  transverseconnection.cpp  transverseconnection.h
wedge/wedge/convenience/: canonicalprint.cpp  canonicalprint.h  horizontal.h  latex.cpp  latex.h  logging.h  named.h  omitfunctionargument.cpp  omitfunctionargument.h  parse.cpp  parse.h  printcontext.h  simplifier.cpp  simplifier.h  spiritgrammars.hpp  spiritsemanticactions.hpp
wedge/wedge/liealgebras/: derivations.cpp  derivations.h  liegroup.cpp  liegroup.h  liegroupextension.h  liegroupstructures.h  liegrouptostring.cpp  liegrouptostring.h  liesubgroup.cpp  liesubgroup.h  so.h  su.h
wedge/wedge/linearalgebra/: affinebasis.h  anylinalg.h  basis.h  bilinear.h  bilinearform.cpp  bilinearform.h  derivation.h  ginaclinalg.cpp  ginaclinalg.h  lambda.h  leibniz.h  linear.h  linearcombinations.h  pforms.h  tensor.h  tensorlambda.h  vectorspace.h
wedge/wedge/manifolds/: concretemanifold.h  coordinates.h  differentialform.cpp  differentialform.h  fderivative.cpp  fderivative.h  function.cpp  function.h  liederivative.cpp  liederivative.h  manifold.cpp  manifold.h  manifoldwith.h
wedge/wedge/polynomialalgebra/: cocoapolyalg.h  polybasis.cpp  polybasis.h
wedge/wedge/representations/: adjoint.h  gl.h  linearaction.cpp  linearaction.h  repgl.h  repsl2.h  repso.h  stabilizer.h
wedge/wedge/structures/: gstructure.h  pseudoriemannianstructure.cpp  pseudoriemannianstructure.h  riemannianstructure.cpp  riemannianstructure.h  spinor.cpp  spinor.h  structures.cpp  structures.h  submersion.cpp  submersion.h  submersionwith.h  transversestructure.cpp  transversestructure.h
