cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_compile_options(-g -O3 -Wctor-dtor-privacy -Wreorder -Wold-style-cast -Wsign-promo -Wchar-subscripts -Winit-self -Wmissing-braces -Wparentheses -Wreturn-type -Wswitch -Wtrigraphs -Wextra -Wno-sign-compare -Wno-narrowing -Wno-attributes)
project(WedgeExamples VERSION 4.0)
link_libraries(wedge ginac cocoa gmp)
add_executable(almostcomplex src/almostcomplex.cpp)
#add_executable(dictionary src/dictionary.cpp)
add_executable(groups src/groups.cpp)
add_executable(so3 src/so3.cpp)
add_executable(cartan src/cartan.cpp)
add_executable(einsteinsasaki src/einsteinsasaki.cpp)
add_executable(halfflat src/halfflat.cpp)
add_executable(specialgeometries src/specialgeometries.cpp)
add_executable(clifford src/clifford.cpp)
add_executable(estable src/estable.cpp)
add_executable(performance src/performance.cpp)
add_executable(symplectic src/symplectic.cpp)
add_executable(curvature src/curvature.cpp)
add_executable(gkspinors src/gkspinors.cpp)
#add_executable(ricci src/ricci.cpp)


