cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_compile_definitions(IN_GINAC)
add_compile_options(-g -O3 -Wctor-dtor-privacy -Wreorder -Wold-style-cast -Wsign-promo -Wchar-subscripts -Winit-self -Wmissing-braces -Wparentheses -Wreturn-type -Wswitch -Wtrigraphs -Wextra -Wno-sign-compare -Wno-narrowing -Wno-attributes)

set(BASE_SRC wedge/base/normalform.cpp wedge/base/logging.cpp wedge/base/utilities.cpp  wedge/base/wexception.cpp wedge/base/wedgealgebraic.cpp wedge/base/utilities.cpp)
set(CONNECTIONS_SRC wedge/connections/connection.cpp wedge/connections/pseudolevicivita.cpp wedge/connections/transverseconnection.cpp)
set(CONVENIENCE_SRC wedge/convenience/latex.cpp wedge/convenience/canonicalprint.cpp wedge/convenience/omitfunctionargument.cpp wedge/convenience/parse.cpp wedge/convenience/simplifier.cpp)
set(LIE_ALGEBRAS_SRC  wedge/liealgebras/derivations.cpp wedge/liealgebras/liegroup.cpp wedge/liealgebras/liesubgroup.cpp)
set(LINEARALGEBRA_SRC wedge/linearalgebra/bilinearform.cpp wedge/linearalgebra/ginaclinalg.cpp)
set(MANIFOLDS_SRC wedge/manifolds/manifold.cpp wedge/manifolds/function.cpp wedge/manifolds/differentialform.cpp wedge/manifolds/liederivative.cpp  wedge/manifolds/fderivative.cpp)
set(POLY_SRC wedge/polynomialalgebra/polybasis.cpp)
set(STRUCTURES_SRC wedge/structures/pseudoriemannianstructure.cpp wedge/structures/riemannianstructure.cpp wedge/structures/spinor.cpp wedge/structures/submersion.cpp wedge/structures/transversestructure.cpp wedge/structures/structures.cpp)
set(REPRESENTATIONS_SRC wedge/representations/linearaction.cpp)
add_library(wedge SHARED ${BASE_SRC} ${CONVENIENCE_SRC} ${CONNECTIONS_SRC} ${LIE_ALGEBRAS_SRC} ${LINEARALGEBRA_SRC} ${MANIFOLDS_SRC} ${POLY_SRC} ${REPRESENTATIONS_SRC}  ${STRUCTURES_SRC})
target_link_libraries(wedge PUBLIC ginac cocoa gmp)
target_link_directories(wedge PUBLIC ${GINAC_DIR}/ginac/.libs)
target_include_directories(wedge PUBLIC "${PROJECT_BINARY_DIR}" ${PROJECT_SOURCE_DIR}/wedge)
target_include_directories(wedge PUBLIC ${GINAC_DIR} ${GINAC_DIR}/ginac)


set(BASE_HDR wedge/base/classname.h wedge/base/logging.h wedge/base/expressions.h wedge/base/normalform.h wedge/base/parameters.h wedge/base/utilities.h wedge/base/wedgealgebraic.h wedge/base/wedgebase.h wedge/base/wexception.h)
set(CONNECTIONS_HDR wedge/connections/connection.h wedge/connections/pseudolevicivita.h wedge/connections/riemannianconnection.h wedge/connections/torsionfreeconnection.h wedge/connections/transverseconnection.h)
set(CONVENIENCE_HDR wedge/convenience/latex.h wedge/convenience/canonicalprint.h wedge/convenience/named.h wedge/convenience/omitfunctionargument.h wedge/convenience/parse.h wedge/convenience/printcontext.h wedge/convenience/simplifier.h wedge/convenience/spiritgrammars.hpp wedge/convenience/spiritsemanticactions.hpp)
set(LIE_ALGEBRAS_HDR wedge/liealgebras/derivations.h wedge/liealgebras/liegroup.h wedge/liealgebras/liegroupextension.h wedge/liealgebras/liegroupstructures.h wedge/liealgebras/liesubgroup.h wedge/liealgebras/so.h wedge/liealgebras/su.h)
set(LINEAR_ALGEBRA_HDR wedge/linearalgebra/affinebasis.h wedge/linearalgebra/anylinalg.h wedge/linearalgebra/basis.h wedge/linearalgebra/bilinear.h wedge/linearalgebra/bilinearform.h wedge/linearalgebra/derivation.h wedge/linearalgebra/ginaclinalg.h wedge/linearalgebra/lambda.h wedge/linearalgebra/leibniz.h wedge/linearalgebra/linear.h wedge/linearalgebra/linearcombinations.h wedge/linearalgebra/pforms.h wedge/linearalgebra/tensor.h wedge/linearalgebra/tensorlambda.h wedge/linearalgebra/vectorspace.h)
set(MANIFOLDS_HDR wedge/manifolds/concretemanifold.h wedge/manifolds/coordinates.h wedge/manifolds/differentialform.h wedge/manifolds/fderivative.h wedge/manifolds/function.h wedge/manifolds/liederivative.h wedge/manifolds/manifold.h wedge/manifolds/manifoldwith.h)
set(POLY_HDR wedge/polynomialalgebra/cocoapolyalg.h wedge/polynomialalgebra/polybasis.h)
set(REPRESENTATIONS_HDR wedge/representations/adjoint.h wedge/representations/gl.h wedge/representations/linearaction.h wedge/representations/repgl.h wedge/representations/repsl2.h wedge/representations/repso.h  wedge/representations/stabilizer.h)
set(STRUCTURES_HDR wedge/structures/gstructure.h wedge/structures/pseudoriemannianstructure.h wedge/structures/riemannianstructure.h wedge/structures/spinor.h wedge/structures/structures.h wedge/structures/submersion.h wedge/structures/submersionwith.h wedge/structures/transversestructure.h)

install(TARGETS wedge LIBRARY)
install(FILES ${BASE_HDR} DESTINATION include/wedge/base)
install(FILES ${CONNECTIONS_HDR} DESTINATION include/wedge/connections)
install(FILES ${CONVENIENCE_HDR} DESTINATION include/wedge/convenience)
install(FILES ${LIE_ALGEBRAS_HDR} DESTINATION include/wedge/liealgebras)
install(FILES ${LINEAR_ALGEBRA_HDR} DESTINATION include/wedge/linearalgebra)
install(FILES ${MANIFOLDS_HDR} DESTINATION include/wedge/manifolds)
install(FILES ${POLY_HDR} DESTINATION include/wedge/polynomialalgebra)
install(FILES ${REPRESENTATIONS_HDR} DESTINATION include/wedge/representations)
install(FILES ${STRUCTURES_HDR} DESTINATION include/wedge/structures)
install(FILES ${PROJECT_BINARY_DIR}/wedge/wedgeconfig.h DESTINATION include/wedge)
install(FILES wedge/wedge.h DESTINATION include/wedge)
